<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="default_web_client_id">616747972001-d1rfh5vv0c4na1jsmmtt1utsch3417e2.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="income">INCOME</string>
    <string name="salary">Salary</string>
    <string name="gift">Gift</string>
    <string name="refund">Refund</string>
    <string name="investment">Investment</string>
    <string name="other">Other</string>
    <string name="type">TYPE</string>
    <string name="add_income">Add Income</string>
    <string name="save_income">Save Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="save_expense">Save Expense</string>
    <string name="required">Required</string>
    <string name="no_custom_categories_to_delete">No custom categories to delete</string>
    <string name="select_date">Select date</string>
    <string name="date_picker">DATE_PICKER</string>
    <string name="eee_mmm_d_h_mm_a">EEE, MMM d, h:mm a</string>
    <string name="app_prefs">app_prefs</string>
    <string name="default_categories_inserted">DEFAULT_CATEGORIES_INSERTED</string>
    <string name="google_login">GOOGLE_LOGIN</string>
    <string name="google_sign_in_failed">Google sign-in failed</string>
    <string name="firebase_auth_failed">Firebase auth failed</string>
    <string name="expense">EXPENSE</string>
    <string name="enter_amount">Enter amount</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="enter_description">Enter description</string>
    <string name="analytics">Analytics</string>
    <string name="expense_by_category">Expense by Category</string>
    <string name="expense_s">Expense</string>
    <string name="income_s">Income</string>
    <string name="total_balance">Total Balance</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See all</string>
    <string name="all">All</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="what_is_this_income_for">What is this income for?</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category name</string>
    <string name="cancel">Cancel</string>
    <string name="delete_category">Delete Category</string>
    <string name="export_data">Export Data</string>
    <string name="export_as_pdf">Export as PDF</string>
    <string name="export">Export</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="date">Date:</string>
    <string name="category">Category:</string>
    <string name="typee">Type:</string>
    <string name="long_press_chart_elements_for_categoty_expenses">Long press chart elements for categoty expenses</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_content">
    \n 1. You agree to use this app responsibly.\n
    2. This app is provided as-is.\n
    3. We are not responsible for data loss.\n
    </string>
    <string name="privacy_content">
    \n 1. We respect your privacy.\n
    2. No personal data is shared with third parties.\n
    3. Your data stays on your device.\n
    </string>
    <string name="gmail">Gmail</string>
</resources>